erlang-p1-sqlite3 (1.1.5-0.2) unstable; urgency=low

  * Backport some changes in the upstream source package:

    * Rename source package to erlang-p1-sqlite3

  * Remove unused variables in debian/dh-rebar.conf.

 -- Mathias Ertl <mati@jabber.at>  Sat, 16 Sep 2017 20:35:12 +0200

erlang-sqlite3 (1.1.5-0.1) unstable; urgency=low

  * New upstream release.
  * Use new upstream repository.
  * Use upstream tag format.
  * Conflicts: ejabberd (<< 1:16.02)

 -- Mathias Ertl <mati@jabber.at>  Thu, 10 Mar 2016 11:37:35 +0100

erlang-sqlite3 (0.2015.12.21-0.1) unstable; urgency=low

  * Initial release.

 -- Mathias Ertl <mati@jabber.at>  Sat, 16 Jan 2016 11:40:39 +0100